<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="@dimen/content_inset"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/add_reminder_layout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="@dimen/edit_text_start_margin"
            android:layout_marginEnd="16dp"
            android:gravity="top|start"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="@color/accent"
            android:textSize="@dimen/big_reminder_text_size"
            android:importantForAutofill="no" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/add_reminder_layout_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_layout_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/half_layout_height"
                android:layout_marginTop="@dimen/reminder_top_margin"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/grey"
                android:textSize="@dimen/medium_reminder_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/note_photo"
                    android:layout_width="@dimen/reminder_image_size"
                    android:layout_height="@dimen/reminder_image_size"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:focusable="true"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/photo_view" />

                <ImageButton
                    android:id="@+id/note_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:contentDescription="@string/make_photo_button"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_layout_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setDate">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_end_margin"
                    android:src="@drawable/date"
                    android:contentDescription="@string/data_set_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_reminder_text_size" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/medium_reminder_text_size" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_layout_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setTime">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_end_margin"
                    android:src="@drawable/time"
                    android:contentDescription="@string/time_set_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_reminder_text_size" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/medium_reminder_text_size" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_layout_height">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_end_margin"
                    android:src="@drawable/repeat"
                    android:contentDescription="@string/repeat_set_button" />

                <LinearLayout
                    android:id="@+id/repeat_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_reminder_text_size" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/medium_reminder_text_size" />

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/reminder_small_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="@string/text_off"
                    android:textOn="@string/text_on" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat_no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_layout_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_end_margin"
                    android:src="@drawable/interval"
                    android:contentDescription="@string/repeat_set_interval_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_no_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_reminder_text_size" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/medium_reminder_text_size" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/half_layout_height"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_end_margin"
                    android:src="@drawable/type"
                    android:contentDescription="@string/repeat_type_button" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_reminder_text_size" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/medium_reminder_text_size" />

                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/note_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_drop_shadow" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/reminder_top_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="changeActiveButton"
        app:fab_size="normal"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_icon="@drawable/notifications_grey"
        android:contentDescription="@string/is_not_active"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/reminder_small_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="changeInactiveButton"
        app:fab_size="normal"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_icon="@drawable/bell"
        android:contentDescription="@string/is_active"/>

</RelativeLayout>
